<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/monster_imageView"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/monster_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/monster_name"
        app:layout_constraintEnd_toEndOf="@+id/monster_imageView"
        app:layout_constraintStart_toStartOf="@+id/monster_imageView"
        app:layout_constraintTop_toBottomOf="@+id/monster_imageView" />

    <TextView
        android:id="@+id/monster_type_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monster_type"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="@+id/monster_imageView"
        app:layout_constraintStart_toStartOf="@+id/monster_imageView"
        app:layout_constraintTop_toBottomOf="@+id/monster_name_textView" />

    <TextView
        android:id="@+id/monster_subtype_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/monster_subtype"
        app:layout_constraintEnd_toEndOf="@+id/monster_imageView"
        app:layout_constraintStart_toStartOf="@+id/monster_imageView"
        app:layout_constraintTop_toBottomOf="@+id/monster_type_textView" />

    <TextView
        android:id="@+id/monster_xp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/xp_textView"
        app:layout_constraintEnd_toEndOf="@id/monster_imageView"
        app:layout_constraintStart_toStartOf="@id/monster_imageView"
        app:layout_constraintTop_toBottomOf="@id/monster_subtype_textView" />

    <TextView
        android:id="@+id/monster_challenge_rating_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:text="@string/challenge_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/monster_ac_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:text="@string/armor_class_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_challenge_rating_textView" />

    <TextView
        android:id="@+id/monster_hp_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:text="@string/health_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_ac_textView" />

    <TextView
        android:id="@+id/monster_hitdice_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:text="@string/hit_dice_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_hp_textView" />

    <TextView
        android:id="@+id/monster_alignment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/alignment_textView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_hitdice_textView" />

    <TextView
        android:id="@+id/monster_sizet_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/size_textView"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_alignment_textView" />


    <TextView
        android:id="@+id/strength_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:text="@string/strength_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dexterity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/dexterity_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/strength_textView" />

    <TextView
        android:id="@+id/constitution_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/con"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dexterity_textView" />

    <TextView
        android:id="@+id/intelligence_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/intelligence_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constitution_textView" />

    <TextView
        android:id="@+id/wisdom_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/wisdom_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intelligence_textView" />

    <TextView
        android:id="@+id/charisma_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/charisma_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wisdom_textView" />

    <TextView
        android:id="@+id/languages_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/languages"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monster_xp_textView" />

    <TextView
        android:id="@+id/language_results_textVeiw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/languages_textView"
        app:layout_constraintTop_toBottomOf="@+id/languages_textView"
        tools:text="Languages go here" />

    <TextView
        android:id="@+id/senses_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/senses"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_results_textVeiw" />

    <TextView
        android:id="@+id/sense_results_textVeiw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/senses_textView"
        app:layout_constraintTop_toBottomOf="@+id/senses_textView"
        tools:text="Senses go here" />

    <TextView
        android:id="@+id/abilities_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/abilities"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senses_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/abilities_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/proficiencies_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/abilities_textView"
        app:layout_constraintTop_toBottomOf="@+id/abilities_textView" />

    <TextView
        android:id="@+id/proficiencies_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/proficiencies"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/actions_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abilities_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/proficiencies_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/actions_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/proficiencies_textView"
        app:layout_constraintTop_toBottomOf="@+id/proficiencies_textView" />

    <TextView
        android:id="@+id/actions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/actions"
        app:layout_constraintVertical_weight=".25"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/condition_damage_textView"
        app:layout_constraintTop_toBottomOf="@id/proficiencies_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actions_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/condition_damage_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/actions_textView"
        app:layout_constraintTop_toBottomOf="@+id/actions_textView" />

    <TextView
        android:id="@+id/condition_damage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/condition_and_damage_variables"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actions_textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/condition_damage_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/condition_damage_textView"
        app:layout_constraintTop_toBottomOf="@+id/condition_damage_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>