<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SearchFragment">


    <EditText
        android:id="@+id/monsterName_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/monster_name_button"
        android:fontFamily="@font/bad_script_regular"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight=".75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_error"
        android:layout_marginHorizontal="64dp"
        android:visibility="invisible"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/search_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/find_monster"
        android:fontFamily="@font/kaushan_script_regular"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/error_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monsterName_editText"
        />

    <!--<androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_textView" />-->

    <!--
        android:entries="Name/Type/Challenge Rating"-->

</androidx.constraintlayout.widget.ConstraintLayout>